// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridView component with decoration Default component with first_cell decoration 1`] = `
<div
  class="grid-view"
>
  <div
    class="scrollbars"
    style="left: 70px;"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="grid-view__left"
    style="width: 70px;"
  >
    <div
      class="grid-view__inner"
      style="min-width: 70px;"
    >
      <div
        class="grid-view__head"
      >
        <div
          class="grid-view__column"
          style="width: 70px;"
        >
          <div>
            <a
              class="grid-view__head-row-identifier-dropdown"
            >
              <i
                class="fas fa-list-ol"
              />
            </a>
             
          </div>
        </div>
          
        <!---->
      </div>
       
      <div
        class="grid-view__body"
      >
        <div
          class="grid-view__body-inner"
        >
          <div
            class="grid-view__placeholder"
            style="height: 66px; width: 70px;"
          />
           
          <div
            class="grid-view__rows"
            style="transform: translateY(0px) translateX(nullpx);"
          >
            <div
              class="grid-view__row"
            >
              <!---->
               
              <div
                class="grid-view__column"
                style="width: 70px;"
              >
                <div
                  class="grid-view__row-info"
                >
                  <div
                    class="grid-view__row-count"
                    title="2"
                  >
                    
            2
          
                  </div>
                   
                  <div
                    class="grid-view__row-drag"
                  />
                   
                  <a
                    class="grid-view__row-more"
                  >
                    <i
                      class="fas fa-expand"
                    />
                  </a>
                   
                  <div>
                    fake_decoration: fake_value
                  </div>
                  <div>
                    fake_decoration: fake_value
                  </div>
                </div>
              </div>
               
            </div>
          </div>
           
          <div
            class="grid-view__row"
            style="width: 70px;"
          >
            <div
              class="grid-view__column"
              style="width: 70px;"
            >
              <a
                class="grid-view__add-row"
              >
                <i
                  class="fas fa-plus"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="grid-view__foot"
      >
        <div
          class="grid-view__foot-info"
        >
          
        gridView.rowCount - 2
      
        </div>
         
      </div>
    </div>
     
    <div
      style="display: none;"
    >
      <div
        class="grid-view__field-dragging"
        style="width: 0px; left: 0px;"
      />
       
      <div
        class="grid-view__field-target"
        style="left: 0px;"
      />
    </div>
  </div>
   
   
  <div
    class="grid-view__divider"
    style="left: 70px;"
  />
   
  <!---->
   
  <div
    class="grid-view__right"
    style="left: 70px;"
  >
    <div
      class="grid-view__inner"
      style="min-width: 800px;"
    >
      <div
        class="grid-view__head"
      >
        <!---->
         
        <div
          class="grid-view__column"
          filters=""
          style="width: 200px;"
        >
          <div
            class="grid-view__description"
          >
            <div
              class="grid-view__description-icon"
            >
              <i
                class="fas fa-font"
              />
            </div>
             
            <div
              class="grid-view__description-name"
            >
              <span>
                
        Name
      
              </span>
            </div>
             
            <!---->
             
            <a
              class="grid-view__description-options"
            >
              <i
                class="fas fa-caret-down"
              />
            </a>
             
             
            <div
              class="grid-view__description-width"
            />
          </div>
        </div>
        <div
          class="grid-view__column"
          filters=""
          style="width: 200px;"
        >
          <div
            class="grid-view__description"
          >
            <div
              class="grid-view__description-icon"
            >
              <i
                class="fas fa-font"
              />
            </div>
             
            <div
              class="grid-view__description-name"
            >
              <span>
                
        Surname
      
              </span>
            </div>
             
            <!---->
             
            <a
              class="grid-view__description-options"
            >
              <i
                class="fas fa-caret-down"
              />
            </a>
             
             
            <div
              class="grid-view__description-width"
            />
          </div>
        </div>
        <div
          class="grid-view__column"
          filters=""
          style="width: 200px;"
        >
          <div
            class="grid-view__description"
          >
            <div
              class="grid-view__description-icon"
            >
              <i
                class="fas fa-font"
              />
            </div>
             
            <div
              class="grid-view__description-name"
            >
              <span>
                
        Address
      
              </span>
            </div>
             
            <!---->
             
            <a
              class="grid-view__description-options"
            >
              <i
                class="fas fa-caret-down"
              />
            </a>
             
             
            <div
              class="grid-view__description-width"
            />
          </div>
        </div>
         
        <div
          class="grid-view__column"
          style="width: 100px;"
        >
          <a
            class="grid-view__add-column"
          >
            <i
              class="fas fa-plus"
            />
          </a>
           
        </div>
      </div>
       
      <div
        class="grid-view__body"
      >
        <div
          class="grid-view__body-inner"
        >
          <div
            class="grid-view__placeholder"
            style="height: 66px; width: 600px;"
          >
            <div
              class="grid-view__placeholder-column"
              style="left: 199px;"
            />
            <div
              class="grid-view__placeholder-column"
              style="left: 399px;"
            />
            <div
              class="grid-view__placeholder-column"
              style="left: 599px;"
            />
          </div>
           
          <div
            class="grid-view__rows"
            style="transform: translateY(0px) translateX(0px);"
          >
            <div
              class="grid-view__row"
            >
              <!---->
               
              <div
                class="grid-view__column"
                style="width: 200px;"
              >
                <div
                  class="grid-view__cell"
                >
                  <div
                    class="grid-field-text"
                  >
                    first
                  </div>
                </div>
              </div>
              <div
                class="grid-view__column"
                style="width: 200px;"
              >
                <div
                  class="grid-view__cell"
                >
                  <div
                    class="grid-field-text"
                  >
                    Bram
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="grid-view__row"
            style="width: 600px;"
          >
            <div
              class="grid-view__column"
              style="width: 600px;"
            >
              <a
                class="grid-view__add-row"
              >
                <!---->
              </a>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="grid-view__foot"
      >
         
        <div
          style="width: 200px;"
        >
          <div
            class="grid-view-aggregation"
          >
            <!---->
             
          </div>
        </div>
        <div
          style="width: 200px;"
        >
          <div
            class="grid-view-aggregation"
          >
            <!---->
             
          </div>
        </div>
        <div
          style="width: 200px;"
        >
          <div
            class="grid-view-aggregation"
          >
            <!---->
             
          </div>
        </div>
      </div>
    </div>
     
    <div
      style="display: none;"
    >
      <div
        class="grid-view__field-dragging"
        style="width: 0px; left: 0px;"
      />
       
      <div
        class="grid-view__field-target"
        style="left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="grid-view__row-dragging-container"
    style="display: none;"
  >
    <div
      class="grid-view__row-dragging"
      style="width: 670px; top: 0px;"
    />
     
    <div
      class="grid-view__row-target"
      style="width: 670px; top: 0px;"
    />
  </div>
   
   
</div>
`;

exports[`GridView component with decoration Default component with row wrapper decoration 1`] = `
<div
  class="grid-view"
>
  <div
    class="scrollbars"
    style="left: 70px;"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="grid-view__left"
    style="width: 70px;"
  >
    <div
      class="grid-view__inner"
      style="min-width: 70px;"
    >
      <div
        class="grid-view__head"
      >
        <div
          class="grid-view__column"
          style="width: 70px;"
        >
          <div>
            <a
              class="grid-view__head-row-identifier-dropdown"
            >
              <i
                class="fas fa-list-ol"
              />
            </a>
             
          </div>
        </div>
          
        <!---->
      </div>
       
      <div
        class="grid-view__body"
      >
        <div
          class="grid-view__body-inner"
        >
          <div
            class="grid-view__placeholder"
            style="height: 66px; width: 70px;"
          />
           
          <div
            class="grid-view__rows"
            style="transform: translateY(0px) translateX(nullpx);"
          >
            <div
              class="test-wrapper"
            />
          </div>
           
          <div
            class="grid-view__row"
            style="width: 70px;"
          >
            <div
              class="grid-view__column"
              style="width: 70px;"
            >
              <a
                class="grid-view__add-row"
              >
                <i
                  class="fas fa-plus"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="grid-view__foot"
      >
        <div
          class="grid-view__foot-info"
        >
          
        gridView.rowCount - 2
      
        </div>
         
      </div>
    </div>
     
    <div
      style="display: none;"
    >
      <div
        class="grid-view__field-dragging"
        style="width: 0px; left: 0px;"
      />
       
      <div
        class="grid-view__field-target"
        style="left: 0px;"
      />
    </div>
  </div>
   
   
  <div
    class="grid-view__divider"
    style="left: 70px;"
  />
   
  <!---->
   
  <div
    class="grid-view__right"
    style="left: 70px;"
  >
    <div
      class="grid-view__inner"
      style="min-width: 800px;"
    >
      <div
        class="grid-view__head"
      >
        <!---->
         
        <div
          class="grid-view__column"
          filters=""
          style="width: 200px;"
        >
          <div
            class="grid-view__description"
          >
            <div
              class="grid-view__description-icon"
            >
              <i
                class="fas fa-font"
              />
            </div>
             
            <div
              class="grid-view__description-name"
            >
              <span>
                
        Name
      
              </span>
            </div>
             
            <!---->
             
            <a
              class="grid-view__description-options"
            >
              <i
                class="fas fa-caret-down"
              />
            </a>
             
             
            <div
              class="grid-view__description-width"
            />
          </div>
        </div>
        <div
          class="grid-view__column"
          filters=""
          style="width: 200px;"
        >
          <div
            class="grid-view__description"
          >
            <div
              class="grid-view__description-icon"
            >
              <i
                class="fas fa-font"
              />
            </div>
             
            <div
              class="grid-view__description-name"
            >
              <span>
                
        Surname
      
              </span>
            </div>
             
            <!---->
             
            <a
              class="grid-view__description-options"
            >
              <i
                class="fas fa-caret-down"
              />
            </a>
             
             
            <div
              class="grid-view__description-width"
            />
          </div>
        </div>
        <div
          class="grid-view__column"
          filters=""
          style="width: 200px;"
        >
          <div
            class="grid-view__description"
          >
            <div
              class="grid-view__description-icon"
            >
              <i
                class="fas fa-font"
              />
            </div>
             
            <div
              class="grid-view__description-name"
            >
              <span>
                
        Address
      
              </span>
            </div>
             
            <!---->
             
            <a
              class="grid-view__description-options"
            >
              <i
                class="fas fa-caret-down"
              />
            </a>
             
             
            <div
              class="grid-view__description-width"
            />
          </div>
        </div>
         
        <div
          class="grid-view__column"
          style="width: 100px;"
        >
          <a
            class="grid-view__add-column"
          >
            <i
              class="fas fa-plus"
            />
          </a>
           
        </div>
      </div>
       
      <div
        class="grid-view__body"
      >
        <div
          class="grid-view__body-inner"
        >
          <div
            class="grid-view__placeholder"
            style="height: 66px; width: 600px;"
          >
            <div
              class="grid-view__placeholder-column"
              style="left: 199px;"
            />
            <div
              class="grid-view__placeholder-column"
              style="left: 399px;"
            />
            <div
              class="grid-view__placeholder-column"
              style="left: 599px;"
            />
          </div>
           
          <div
            class="grid-view__rows"
            style="transform: translateY(0px) translateX(0px);"
          >
            <div
              class="test-wrapper"
            />
          </div>
           
          <div
            class="grid-view__row"
            style="width: 600px;"
          >
            <div
              class="grid-view__column"
              style="width: 600px;"
            >
              <a
                class="grid-view__add-row"
              >
                <!---->
              </a>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="grid-view__foot"
      >
         
        <div
          style="width: 200px;"
        >
          <div
            class="grid-view-aggregation"
          >
            <!---->
             
          </div>
        </div>
        <div
          style="width: 200px;"
        >
          <div
            class="grid-view-aggregation"
          >
            <!---->
             
          </div>
        </div>
        <div
          style="width: 200px;"
        >
          <div
            class="grid-view-aggregation"
          >
            <!---->
             
          </div>
        </div>
      </div>
    </div>
     
    <div
      style="display: none;"
    >
      <div
        class="grid-view__field-dragging"
        style="width: 0px; left: 0px;"
      />
       
      <div
        class="grid-view__field-target"
        style="left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="grid-view__row-dragging-container"
    style="display: none;"
  >
    <div
      class="grid-view__row-dragging"
      style="width: 670px; top: 0px;"
    />
     
    <div
      class="grid-view__row-target"
      style="width: 670px; top: 0px;"
    />
  </div>
   
   
</div>
`;

exports[`GridView component with decoration Default component with unavailable decoration 1`] = `
<div
  class="grid-view"
>
  <div
    class="scrollbars"
    style="left: 70px;"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="grid-view__left"
    style="width: 70px;"
  >
    <div
      class="grid-view__inner"
      style="min-width: 70px;"
    >
      <div
        class="grid-view__head"
      >
        <div
          class="grid-view__column"
          style="width: 70px;"
        >
          <div>
            <a
              class="grid-view__head-row-identifier-dropdown"
            >
              <i
                class="fas fa-list-ol"
              />
            </a>
             
          </div>
        </div>
          
        <!---->
      </div>
       
      <div
        class="grid-view__body"
      >
        <div
          class="grid-view__body-inner"
        >
          <div
            class="grid-view__placeholder"
            style="height: 66px; width: 70px;"
          />
           
          <div
            class="grid-view__rows"
            style="transform: translateY(0px) translateX(nullpx);"
          >
            <div
              class="grid-view__row"
            >
              <!---->
               
              <div
                class="grid-view__column"
                style="width: 70px;"
              >
                <div
                  class="grid-view__row-info"
                >
                  <div
                    class="grid-view__row-count"
                    title="2"
                  >
                    
            2
          
                  </div>
                   
                  <div
                    class="grid-view__row-drag"
                  />
                   
                  <a
                    class="grid-view__row-more"
                  >
                    <i
                      class="fas fa-expand"
                    />
                  </a>
                   
                </div>
              </div>
               
            </div>
          </div>
           
          <div
            class="grid-view__row"
            style="width: 70px;"
          >
            <div
              class="grid-view__column"
              style="width: 70px;"
            >
              <a
                class="grid-view__add-row"
              >
                <i
                  class="fas fa-plus"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="grid-view__foot"
      >
        <div
          class="grid-view__foot-info"
        >
          
        gridView.rowCount - 2
      
        </div>
         
      </div>
    </div>
     
    <div
      style="display: none;"
    >
      <div
        class="grid-view__field-dragging"
        style="width: 0px; left: 0px;"
      />
       
      <div
        class="grid-view__field-target"
        style="left: 0px;"
      />
    </div>
  </div>
   
   
  <div
    class="grid-view__divider"
    style="left: 70px;"
  />
   
  <!---->
   
  <div
    class="grid-view__right"
    style="left: 70px;"
  >
    <div
      class="grid-view__inner"
      style="min-width: 800px;"
    >
      <div
        class="grid-view__head"
      >
        <!---->
         
        <div
          class="grid-view__column"
          filters=""
          style="width: 200px;"
        >
          <div
            class="grid-view__description"
          >
            <div
              class="grid-view__description-icon"
            >
              <i
                class="fas fa-font"
              />
            </div>
             
            <div
              class="grid-view__description-name"
            >
              <span>
                
        Name
      
              </span>
            </div>
             
            <!---->
             
            <a
              class="grid-view__description-options"
            >
              <i
                class="fas fa-caret-down"
              />
            </a>
             
             
            <div
              class="grid-view__description-width"
            />
          </div>
        </div>
        <div
          class="grid-view__column"
          filters=""
          style="width: 200px;"
        >
          <div
            class="grid-view__description"
          >
            <div
              class="grid-view__description-icon"
            >
              <i
                class="fas fa-font"
              />
            </div>
             
            <div
              class="grid-view__description-name"
            >
              <span>
                
        Surname
      
              </span>
            </div>
             
            <!---->
             
            <a
              class="grid-view__description-options"
            >
              <i
                class="fas fa-caret-down"
              />
            </a>
             
             
            <div
              class="grid-view__description-width"
            />
          </div>
        </div>
        <div
          class="grid-view__column"
          filters=""
          style="width: 200px;"
        >
          <div
            class="grid-view__description"
          >
            <div
              class="grid-view__description-icon"
            >
              <i
                class="fas fa-font"
              />
            </div>
             
            <div
              class="grid-view__description-name"
            >
              <span>
                
        Address
      
              </span>
            </div>
             
            <!---->
             
            <a
              class="grid-view__description-options"
            >
              <i
                class="fas fa-caret-down"
              />
            </a>
             
             
            <div
              class="grid-view__description-width"
            />
          </div>
        </div>
         
        <div
          class="grid-view__column"
          style="width: 100px;"
        >
          <a
            class="grid-view__add-column"
          >
            <i
              class="fas fa-plus"
            />
          </a>
           
        </div>
      </div>
       
      <div
        class="grid-view__body"
      >
        <div
          class="grid-view__body-inner"
        >
          <div
            class="grid-view__placeholder"
            style="height: 66px; width: 600px;"
          >
            <div
              class="grid-view__placeholder-column"
              style="left: 199px;"
            />
            <div
              class="grid-view__placeholder-column"
              style="left: 399px;"
            />
            <div
              class="grid-view__placeholder-column"
              style="left: 599px;"
            />
          </div>
           
          <div
            class="grid-view__rows"
            style="transform: translateY(0px) translateX(0px);"
          >
            <div
              class="grid-view__row"
            >
              <!---->
               
              <div
                class="grid-view__column"
                style="width: 200px;"
              >
                <div
                  class="grid-view__cell"
                >
                  <div
                    class="grid-field-text"
                  >
                    first
                  </div>
                </div>
              </div>
              <div
                class="grid-view__column"
                style="width: 200px;"
              >
                <div
                  class="grid-view__cell"
                >
                  <div
                    class="grid-field-text"
                  >
                    Bram
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="grid-view__row"
            style="width: 600px;"
          >
            <div
              class="grid-view__column"
              style="width: 600px;"
            >
              <a
                class="grid-view__add-row"
              >
                <!---->
              </a>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="grid-view__foot"
      >
         
        <div
          style="width: 200px;"
        >
          <div
            class="grid-view-aggregation"
          >
            <!---->
             
          </div>
        </div>
        <div
          style="width: 200px;"
        >
          <div
            class="grid-view-aggregation"
          >
            <!---->
             
          </div>
        </div>
        <div
          style="width: 200px;"
        >
          <div
            class="grid-view-aggregation"
          >
            <!---->
             
          </div>
        </div>
      </div>
    </div>
     
    <div
      style="display: none;"
    >
      <div
        class="grid-view__field-dragging"
        style="width: 0px; left: 0px;"
      />
       
      <div
        class="grid-view__field-target"
        style="left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="grid-view__row-dragging-container"
    style="display: none;"
  >
    <div
      class="grid-view__row-dragging"
      style="width: 670px; top: 0px;"
    />
     
    <div
      class="grid-view__row-target"
      style="width: 670px; top: 0px;"
    />
  </div>
   
   
</div>
`;
